...
                                              options: requestOptions,
                                              resultHandler: { (image, _) in
                                                self.imageView.image = image
        })
        
        let rightButtonItem = UIBarButtonItem(
            title: NSLocalizedString("Done", comment: "button"),
            style: .plain,
            target: self,
            action: #selector(rightButtonAction(sender:))
        )
        
        self.navigationItem.rightBarButtonItem = rightButtonItem
...
